개방환경 설정 및 회원가입
1. 스프링 시큐리티
2. 회원 가입

--- a/main/resources/ApplicationMessage.properties
+++ b/main/resources/ApplicationMessage.properties
@@ -38,3 +38,11 @@ menu.pds.member      = \uACF5\uAC1C\uC790\uB8CC\uC2E4
 menu.user.admin      = \uD68C\uC6D0\uAD00\uB9AC
 menu.useritem.list   = \uAD6C\uB9E4\uC0C1\uD488
 
+user.header.list	 = \uD68C\uC6D0 \uBAA9\uB85D
+user.userId			 = ID
+user.userPw			 = \uBE44\uBC00\uBC88\uD638
+user.userName		 = \uD68C\uC6D0 \uC774\uB984
+user.coin			 = \uCF54\uC778
+user.Email			 = \uC774\uBA54\uC77C
+user.Phone			 = \uD578\uB4DC\uD3F0 \uBC88\uD638
+user.regDate		 = \uB4F1\uB85D\uC77C\uC790
