--- a/main/resources/ApplicationMessage.properties
+++ b/main/resources/ApplicationMessage.properties
@@ -1,3 +1,4 @@
+
 action.buy      = \uAD6C\uB9E4
 action.charge   = \uCDA9\uC804
 action.edit     = \uD3B8\uC9D1
@@ -10,17 +11,101 @@ action.new      = \uC0C8\uB85C\uB9CC\uB4E4\uAE30
 action.register = \uB4F1\uB85D
 action.remove   = \uC0AD\uC81C
 action.save     = \uC800\uC7A5
+action.search   = \uAC80\uC0C9
 
-common.cannotSetupAdmin  = \uAD00\uB9AC\uC790\uB97C \uC124\uC815\uD560 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4.
-common.homeWelcome       = Image Shop\uC5D0 \uC624\uC2E0 \uAC83\uC744 \uD658\uC601\uD569\uB2C8\uB2E4.
-common.joinMemberSuccess = {0}\uB2D8, \uAC00\uC785\uC744 \uCD95\uD558\uB4DC\uB9BD\uB2C8\uB2E4.
-common.listEmpty         = \uB370\uC774\uD130\uAC00 \uC5C6\uC2B5\uB2C8\uB2E4.
-common.processSuccess    = \uCC98\uB9AC\uAC00 \uC644\uB8CC\uB418\uC5C8\uC2B5\uB2C8\uB2E4.
+adminpage.header	= \uAD00\uB9AC\uC790\uD398\uC774\uC9C0
+
+auth.header.login  = \uB85C\uADF8\uC778
+auth.header.logout = \uB85C\uADF8\uC544\uC6C3
+auth.rememberMe    = \uB85C\uADF8\uC778 \uC0C1\uD0DC \uC720\uC9C0
+
+board.content         = \uB0B4\uC6A9
+board.header.list     = \uD68C\uC6D0\uAC8C\uC2DC\uD310 \uBAA9\uB85D
+board.header.modify   = \uD68C\uC6D0\uAC8C\uC2DC\uD310 \uC218\uC815
+board.header.read     = \uD68C\uC6D0\uAC8C\uC2DC\uD310 \uC0C1\uC138\uBCF4\uAE30
+board.header.register = \uD68C\uC6D0\uAC8C\uC2DC\uD310 \uB4F1\uB85D
+board.no              = \uBC88\uD638
+board.regdate         = \uB4F1\uB85D\uC77C\uC2DC
+board.title           = \uC81C\uBAA9
+board.writer          = \uC791\uC131\uC790
+
+cart.register		  = \uC7A5\uBC14\uAD6C\uB2C8
+cart.Selremove	 	  = \uC120\uD0DD \uC0AD\uC81C
+cart.price			  = \uC0C1\uD488 \uAE08\uC561
+cart.pay			  = \uACB0\uC81C \uAE08\uC561
+cart.addSuccess		  = \uC0C1\uD488\uC774 \uC7A5\uBC14\uAD6C\uB2C8\uC5D0 \uB2F4\uACBC\uC2B5\uB2C8\uB2E4.
+cart.goList 		  = \uC7A5\uBC14\uAD6C\uB2C8\uB85C \uC774\uB3D9
+
+cartList.amount		  = \uC218\uB7C9
+cartList.allPrice	  = \uCD1D \uAC00\uACA9
+
+codeclass.classCode       = \uCF54\uB4DC\uADF8\uB8F9\uCF54\uB4DC
+codeclass.className       = \uCF54\uB4DC\uADF8\uB8F9\uBA85
+codeclass.header.list     = \uCF54\uB4DC\uADF8\uB8F9 \uBAA9\uB85D
+codeclass.header.modify   = \uCF54\uB4DC\uADF8\uB8F9 \uC218\uC815
+codeclass.header.read     = \uCF54\uB4DC\uADF8\uB8F9 \uC0C1\uC138\uBCF4\uAE30
+codeclass.header.register = \uCF54\uB4DC\uADF8\uB8F9 \uB4F1\uB85D
+codeclass.regdate         = \uB4F1\uB85D\uC77C\uC2DC
+
+codedetail.classCode       = \uADF8\uB8F9\uCF54\uB4DC
+codedetail.codeName        = \uCF54\uB4DC\uBA85
+codedetail.codeValue       = \uCF54\uB4DC\uAC12
+codedetail.header.list     = \uCF54\uB4DC \uBAA9\uB85D
+codedetail.header.modify   = \uCF54\uB4DC \uC218\uC815
+codedetail.header.read     = \uCF54\uB4DC \uC0C1\uC138\uBCF4\uAE30
+codedetail.header.register = \uCF54\uB4DC \uB4F1\uB85D
+codedetail.regdate         = \uB4F1\uB85D\uC77C\uC2DC
+codedetail.sortSeq         = \uC815\uB82C\uC21C\uC11C
+
+coin.amount            = \uCDA9\uC804\uAE08\uC561
+coin.charge            = \uCDA9\uC804
+coin.chargingComplete  = \uCDA9\uC804\uC774 \uC644\uB8CC\uB418\uC5C8\uC2B5\uB2C8\uB2E4.
+coin.header.chargeCoin = \uCF54\uC778 \uCDA9\uC804
+coin.header.list       = \uCDA9\uC804 \uB0B4\uC5ED
+coin.header.listPay    = \uAD6C\uB9E4 \uB0B4\uC5ED
+coin.itemId            = \uC0C1\uD488\uC544\uC774\uB514
+coin.itemName          = \uC0C1\uD488\uBA85
+coin.no                = \uBC88\uD638
+coin.notEnoughCoin     = \uCF54\uC778\uC774 \uBD80\uC871\uD569\uB2C8\uB2E4.
+coin.payAmount         = \uAD6C\uB9E4\uAE08\uC561
+coin.regdate           = \uB4F1\uB85D\uC77C\uC2DC
+
+common.cannotSetupAdmin           = \uAD00\uB9AC\uC790\uB97C \uC124\uC815\uD560 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4.
+common.error.accessDeniedPage     = \uC811\uADFC\uC774 \uAC70\uBD80\uB418\uC5C8\uC2B5\uB2C8\uB2E4.
+common.error.backPage             = \uC774\uC804\uD398\uC774\uC9C0
+common.error.defaultErrorOccurred = \uC5D0\uB7EC\uAC00 \uBC1C\uC0DD\uD558\uC600\uC2B5\uB2C8\uB2E4.
+common.error.errorOccurred        = \uC5D0\uB7EC\uAC00 \uBC1C\uC0DD\uD558\uC600\uC2B5\uB2C8\uB2E4.
+common.error.returnHome           = \uD648\uC73C\uB85C \uB3CC\uC544\uAC00\uAE30
+common.error.urlNotFound          = \uD574\uB2F9 URL\uC740 \uC874\uC7AC\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
+common.homeWelcome                = Image Shop\uC5D0 \uC624\uC2E0 \uAC83\uC744 \uD658\uC601\uD569\uB2C8\uB2E4.
+common.joinMemberSuccess          = {0}\uB2D8, \uAC00\uC785\uC744 \uCD95\uD558\uB4DC\uB9BD\uB2C8\uB2E4.
+common.listEmpty                  = \uB370\uC774\uD130\uAC00 \uC5C6\uC2B5\uB2C8\uB2E4.
+common.processSuccess             = \uCC98\uB9AC\uAC00 \uC644\uB8CC\uB418\uC5C8\uC2B5\uB2C8\uB2E4.
 
 header.home       = \uD648
 header.joinMember = \uD68C\uC6D0\uAC00\uC785
 header.login      = \uB85C\uADF8\uC778
 header.logout     = \uB85C\uADF8\uC544\uC6C3
+
+item.edit                 = \uD3B8\uC9D1
+item.header.downloadError = \uC0C1\uD488 \uB2E4\uC6B4\uB85C\uB4DC \uC5D0\uB7EC
+item.header.list          = \uC0C1\uD488 \uBAA9\uB85D
+item.header.modify        = \uC0C1\uD488 \uC218\uC815
+item.header.read          = \uC0C1\uD488 \uC0C1\uC138\uBCF4\uAE30
+item.header.register      = \uC0C1\uD488 \uB4F1\uB85D
+item.header.remove        = \uC0C1\uD488 \uC0AD\uC81C
+item.itemDescription      = \uC0C1\uD488\uC124\uBA85
+item.itemFile             = \uC0C1\uD488\uD30C\uC77C
+item.itemId               = \uC0C1\uD488\uC544\uC774\uB514
+item.itemName             = \uC0C1\uD488\uBA85
+item.itemPreviewFile      = \uBBF8\uB9AC\uBCF4\uAE30\uD30C\uC77C
+item.itemPrice            = \uC0C1\uD488\uAC00\uACA9
+item.notMyItem            = \uB098\uC758 \uC0C1\uD488\uC774 \uC544\uB2D9\uB2C8\uB2E4.
+item.preview              = \uBBF8\uB9AC\uBCF4\uAE30
+item.purchaseComplete     = \uAD6C\uB9E4\uAC00 \uC644\uB8CC\uB418\uC5C8\uC2B5\uB2C8\uB2E4.
+item.read                 = \uBCF4\uAE30
+item.regdate              = \uB4F1\uB85D\uC77C\uC2DC
+item.remove               = \uC81C\uAC70
 
 menu.board.admin     = \uD68C\uC6D0\uAC8C\uC2DC\uD310\uAD00\uB9AC
 menu.board.member    = \uD68C\uC6D0\uAC8C\uC2DC\uD310
@@ -37,12 +122,45 @@ menu.pds.admin       = \uACF5\uAC1C\uC790\uB8CC\uC2E4\uAD00\uB9AC
 menu.pds.member      = \uACF5\uAC1C\uC790\uB8CC\uC2E4
 menu.user.admin      = \uD68C\uC6D0\uAD00\uB9AC
 menu.useritem.list   = \uAD6C\uB9E4\uC0C1\uD488
+menu.cart.list		 = \uC7A5\uBC14\uAD6C\uB2C8
 
-user.header.list	 = \uD68C\uC6D0 \uBAA9\uB85D
-user.userId			 = ID
-user.userPw			 = \uBE44\uBC00\uBC88\uD638
-user.userName		 = \uD68C\uC6D0 \uC774\uB984
-user.coin			 = \uCF54\uC778
-user.Email			 = \uC774\uBA54\uC77C
-user.Phone			 = \uD578\uB4DC\uD3F0 \uBC88\uD638
-user.regDate		 = \uB4F1\uB85D\uC77C\uC790
+mypage.header		= \uB9C8\uC774\uD398\uC774\uC9C0
+mypage.login		= \uB85C\uADF8\uC778\uD558\uC138\uC694.
+
+notice.content         = \uB0B4\uC6A9
+notice.header.list     = \uACF5\uC9C0\uC0AC\uD56D \uBAA9\uB85D
+notice.header.modify   = \uACF5\uC9C0\uC0AC\uD56D \uC218\uC815
+notice.header.read     = \uACF5\uC9C0\uC0AC\uD56D \uC0C1\uC138\uBCF4\uAE30
+notice.header.register = \uACF5\uC9C0\uC0AC\uD56D \uB4F1\uB85D
+notice.no              = \uBC88\uD638
+notice.regdate         = \uB4F1\uB85D\uC77C\uC2DC
+notice.title           = \uC81C\uBAA9
+notice.writer          = \uC791\uC131\uC790
+
+user.auth                = \uAD8C\uD55C
+user.content             = \uB0B4\uC6A9
+user.coin				 = \uCF54\uC778
+user.email				 = \uC774\uBA54\uC77C
+user.header.list         = \uD68C\uC6D0 \uBAA9\uB85D
+user.header.modify       = \uD68C\uC6D0 \uC218\uC815
+user.header.read         = \uD68C\uC6D0 \uC0C1\uC138\uBCF4\uAE30
+user.header.register     = \uD68C\uC6D0 \uB4F1\uB85D
+user.idchk				 = \uC911\uBCF5 \uCCB4\uD06C
+user.job                 = \uC9C1\uC5C5
+user.no                  = \uBC88\uD638
+user.phone				 = \uD734\uB300\uD3F0 \uBC88\uD638
+user.regdate             = \uB4F1\uB85D\uC77C\uC2DC
+user.userId              = \uC544\uC774\uB514
+user.userName            = \uC0AC\uC6A9\uC790\uBA85
+user.userPw              = \uBE44\uBC00\uBC88\uD638
+user.userPwComfirm		 = \uBE44\uBC00\uBC88\uD638 \uD655\uC778
+
+useritem.download        = \uB2E4\uC6B4\uB85C\uB4DC
+useritem.header.list     = \uAD6C\uB9E4\uC0C1\uD488 \uBAA9\uB85D
+useritem.header.read     = \uAD6C\uB9E4\uC0C1\uD488 \uC0C1\uC138\uBCF4\uAE30
+useritem.itemDescription = \uC0C1\uD488\uC124\uBA85
+useritem.itemFile        = \uC0C1\uD488\uD30C\uC77C
+useritem.itemName        = \uC0C1\uD488\uBA85
+useritem.itemPrice       = \uC0C1\uD488\uAC00\uACA9
+useritem.no              = \uBC88\uD638
+useritem.regdate         = \uAD6C\uB9E4\uC77C\uC2DC
