--- a/main/webapp/WEB-INF/web.xml
+++ b/main/webapp/WEB-INF/web.xml
@@ -28,6 +28,11 @@
 			<param-name>contextConfigLocation</param-name>
 			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
 		</init-param>
+		<!-- 404 에러응 처리할 수 있도록 throwExceptionNoHandlerFound를 true로 -->
+		<init-param>
+			<param-name>throwExceptionNoHandlerFound</param-name>
+			<param-value>true</param-value>
+		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 		
@@ -76,4 +81,9 @@
 		<filter-name>MultipartFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	
+	<!-- 기본 에러 페이지 설정 -->
+	<error-page>
+		<location>/WEB-INF/views/error/errorDefault.jsp</location>
+	</error-page>
 </web-app>
