쇼핑몰 만들기
1. 장바구니

--- a/main/resources/ApplicationMessage.properties
+++ b/main/resources/ApplicationMessage.properties
@@ -1,5 +1,6 @@
 
 action.buy      = \uAD6C\uB9E4
+action.cartadd	= \uC7A5\uBC14\uAD6C\uB2C8
 action.charge   = \uCDA9\uC804
 action.edit     = \uD3B8\uC9D1
 action.home     = \uD648\uC73C\uB85C \uAC00\uAE30
@@ -31,13 +32,15 @@ board.writer          = \uC791\uC131\uC790
 
 cart.register		  = \uC7A5\uBC14\uAD6C\uB2C8
 cart.Selremove	 	  = \uC120\uD0DD \uC0AD\uC81C
-cart.price			  = \uC0C1\uD488 \uAE08\uC561
+cart.itemprice		  = \uC0C1\uD488 \uAE08\uC561
 cart.pay			  = \uACB0\uC81C \uAE08\uC561
-cart.addSuccess		  = \uC0C1\uD488\uC774 \uC7A5\uBC14\uAD6C\uB2C8\uC5D0 \uB2F4\uACBC\uC2B5\uB2C8\uB2E4.
 cart.goList 		  = \uC7A5\uBC14\uAD6C\uB2C8\uB85C \uC774\uB3D9
-
-cartList.amount		  = \uC218\uB7C9
-cartList.allPrice	  = \uCD1D \uAC00\uACA9
+cart.addComplete	  = \uC0C1\uD488\uC774 \uC7A5\uBC14\uAD6C\uB2C8\uC5D0 \uB2F4\uACBC\uC2B5\uB2C8\uB2E4.
+cart.header.list	  = \uC7A5\uBC14\uAD6C\uB2C8 \uBAA9\uB85D
+cart.price			  = \uAE08\uC561
+cart.no				  = \uC7A5\uBC14\uAD6C\uB2C8 \uBC88\uD638
+cart.itemName		  = \uC0C1\uD488 \uC774\uB984
+cart.amount			  = \uC218\uB7C9
 
 coin.amount            = \uCDA9\uC804\uAE08\uC561
 coin.charge            = \uCDA9\uC804
