쇼핑몰 만들기
1. 장바구니 삭제와 비우기

--- a/main/resources/ApplicationMessage.properties
+++ b/main/resources/ApplicationMessage.properties
@@ -41,6 +41,7 @@ cart.price			  = \uAE08\uC561
 cart.no				  = \uC7A5\uBC14\uAD6C\uB2C8 \uBC88\uD638
 cart.itemName		  = \uC0C1\uD488 \uC774\uB984
 cart.amount			  = \uC218\uB7C9
+cart.addFailure		  = \uC7A5\uBC14\uAD6C\uB2C8\uC5D0 \uC0C1\uD488\uC774 \uC774\uBBF8 \uC788\uC2B5\uB2C8\uB2E4.  
 
 coin.amount            = \uCDA9\uC804\uAE08\uC561
 coin.charge            = \uCDA9\uC804
