쇼핑몰 만들기
1. 아이디 중복체크
2. 비밀번호 확인

--- a/main/resources/ApplicationMessage.properties
+++ b/main/resources/ApplicationMessage.properties
@@ -1,4 +1,3 @@
-
 action.buy      = \uAD6C\uB9E4
 action.cartadd	= \uC7A5\uBC14\uAD6C\uB2C8
 action.charge   = \uCDA9\uC804
@@ -13,6 +12,7 @@ action.register = \uB4F1\uB85D
 action.remove   = \uC0AD\uC81C
 action.save     = \uC800\uC7A5
 action.search   = \uAC80\uC0C9
+action.signup	= \uD68C\uC6D0\uAC00\uC785
 
 adminpage.header	= \uAD00\uB9AC\uC790\uD398\uC774\uC9C0
 
@@ -30,18 +30,19 @@ board.regdate         = \uB4F1\uB85D\uC77C\uC2DC
 board.title           = \uC81C\uBAA9
 board.writer          = \uC791\uC131\uC790
 
-cart.register		  = \uC7A5\uBC14\uAD6C\uB2C8
-cart.Selremove	 	  = \uC120\uD0DD \uC0AD\uC81C
-cart.itemprice		  = \uC0C1\uD488 \uAE08\uC561
-cart.pay			  = \uACB0\uC81C \uAE08\uC561
-cart.goList 		  = \uC7A5\uBC14\uAD6C\uB2C8\uB85C \uC774\uB3D9
 cart.addComplete	  = \uC0C1\uD488\uC774 \uC7A5\uBC14\uAD6C\uB2C8\uC5D0 \uB2F4\uACBC\uC2B5\uB2C8\uB2E4.
-cart.header.list	  = \uC7A5\uBC14\uAD6C\uB2C8 \uBAA9\uB85D
-cart.price			  = \uAE08\uC561
-cart.no				  = \uC7A5\uBC14\uAD6C\uB2C8 \uBC88\uD638
-cart.itemName		  = \uC0C1\uD488 \uC774\uB984
-cart.amount			  = \uC218\uB7C9
 cart.addFailure		  = \uC7A5\uBC14\uAD6C\uB2C8\uC5D0 \uC0C1\uD488\uC774 \uC774\uBBF8 \uC788\uC2B5\uB2C8\uB2E4.  
+cart.amount			  = \uC218\uB7C9
+cart.goList 		  = \uC7A5\uBC14\uAD6C\uB2C8\uB85C \uC774\uB3D9
+cart.header.list	  = \uC7A5\uBC14\uAD6C\uB2C8 \uBAA9\uB85D
+cart.itemName		  = \uC0C1\uD488 \uC774\uB984
+cart.itemprice		  = \uC0C1\uD488 \uAE08\uC561
+cart.no				  = \uC7A5\uBC14\uAD6C\uB2C8 \uBC88\uD638
+cart.pay			  = \uACB0\uC81C \uAE08\uC561
+cart.price			  = \uAE08\uC561
+cart.register		  = \uC7A5\uBC14\uAD6C\uB2C8
+cart.remove	 	  	  = \uC0AD\uC81C
+cart.removeall		  = \uC804\uCCB4 \uC0AD\uC81C
 
 coin.amount            = \uCDA9\uC804\uAE08\uC561
 coin.charge            = \uCDA9\uC804
@@ -72,6 +73,9 @@ header.home       = \uD648
 header.joinMember = \uD68C\uC6D0\uAC00\uC785
 header.login      = \uB85C\uADF8\uC778
 header.logout     = \uB85C\uADF8\uC544\uC6C3
+
+input.id			= \uC544\uC774\uB514
+input.password		= \uBE44\uBC00\uBC88\uD638
 
 item.edit                 = \uD3B8\uC9D1
 item.header.downloadError = \uC0C1\uD488 \uB2E4\uC6B4\uB85C\uB4DC \uC5D0\uB7EC
@@ -104,8 +108,6 @@ menu.item.admin      = \uC0C1\uD488\uAD00\uB9AC
 menu.item.member     = \uC0C1\uD488
 menu.notice.admin    = \uACF5\uC9C0\uC0AC\uD56D\uAD00\uB9AC
 menu.notice.member   = \uACF5\uC9C0\uC0AC\uD56D
-menu.pds.admin       = \uACF5\uAC1C\uC790\uB8CC\uC2E4\uAD00\uB9AC
-menu.pds.member      = \uACF5\uAC1C\uC790\uB8CC\uC2E4
 menu.user.admin      = \uD68C\uC6D0\uAD00\uB9AC
 menu.useritem.list   = \uAD6C\uB9E4\uC0C1\uD488
 menu.cart.list		 = \uC7A5\uBC14\uAD6C\uB2C8
@@ -131,6 +133,7 @@ user.header.list         = \uD68C\uC6D0 \uBAA9\uB85D
 user.header.modify       = \uD68C\uC6D0 \uC218\uC815
 user.header.read         = \uD68C\uC6D0 \uC0C1\uC138\uBCF4\uAE30
 user.header.register     = \uD68C\uC6D0 \uB4F1\uB85D
+user.header.setup		 = \uAD00\uB9AC\uC790 \uB4F1\uB85D
 user.idchk				 = \uC911\uBCF5 \uCCB4\uD06C
 user.job                 = \uC9C1\uC5C5
 user.no                  = \uBC88\uD638
