쇼핑몰 만들기
1. css

--- a/main/resources/ApplicationMessage.properties
+++ b/main/resources/ApplicationMessage.properties
@@ -35,11 +35,12 @@ cart.addFailure		  = \uC7A5\uBC14\uAD6C\uB2C8\uC5D0 \uC0C1\uD488\uC774 \uC774\uB
 cart.amount			  = \uC218\uB7C9
 cart.goList 		  = \uC7A5\uBC14\uAD6C\uB2C8\uB85C \uC774\uB3D9
 cart.header.list	  = \uC7A5\uBC14\uAD6C\uB2C8 \uBAA9\uB85D
+cart.info			  = \uC0C1\uD488 \uC815\uBCF4
 cart.itemName		  = \uC0C1\uD488 \uC774\uB984
 cart.itemprice		  = \uC0C1\uD488 \uAE08\uC561
 cart.no				  = \uC7A5\uBC14\uAD6C\uB2C8 \uBC88\uD638
 cart.pay			  = \uACB0\uC81C \uAE08\uC561
-cart.price			  = \uAE08\uC561
+cart.price			  = \uC0C1\uD488 \uAE08\uC561
 cart.register		  = \uC7A5\uBC14\uAD6C\uB2C8
 cart.remove	 	  	  = \uC0AD\uC81C
 cart.removeall		  = \uC804\uCCB4 \uC0AD\uC81C
