--- a/main/resources/ApplicationMessage.properties
+++ b/main/resources/ApplicationMessage.properties
@@ -98,7 +98,7 @@ item.read                 = \uBCF4\uAE30
 item.regdate              = \uB4F1\uB85D\uC77C\uC2DC
 item.remove               = \uC81C\uAC70
 
-menu.board.admin     = \uD68C\uC6D0\uAC8C\uC2DC\uD310\uAD00\uB9AC
+menu.board.admin     = \uAC8C\uC2DC\uD310\uAD00\uB9AC
 menu.board.member    = \uD68C\uC6D0\uAC8C\uC2DC\uD310
 menu.codeclass.list  = \uCF54\uB4DC\uADF8\uB8F9\uAD00\uB9AC
 menu.codedetail.list = \uCF54\uB4DC\uAD00\uB9AC
@@ -107,6 +107,7 @@ menu.coin.list       = \uCDA9\uC804\uB0B4\uC5ED
 menu.coin.listPay    = \uAD6C\uB9E4\uB0B4\uC5ED
 menu.item.admin      = \uC0C1\uD488\uAD00\uB9AC
 menu.item.member     = \uC0C1\uD488
+menu.item.rank		 = \uC0C1\uD488 \uB7AD\uD0B9
 menu.notice.admin    = \uACF5\uC9C0\uC0AC\uD56D\uAD00\uB9AC
 menu.notice.member   = \uACF5\uC9C0\uC0AC\uD56D
 menu.user.admin      = \uD68C\uC6D0\uAD00\uB9AC
@@ -125,6 +126,10 @@ notice.no              = \uBC88\uD638
 notice.regdate         = \uB4F1\uB85D\uC77C\uC2DC
 notice.title           = \uC81C\uBAA9
 notice.writer          = \uC791\uC131\uC790
+
+reply.writer		   = \uC791\uC131\uC790
+reply.content		   = \uB313\uAE00
+reply.regdate		   = \uC791\uC131 \uC77C\uC790
 
 user.auth                = \uAD8C\uD55C
 user.content             = \uB0B4\uC6A9
@@ -153,4 +158,6 @@ useritem.itemFile        = \uC0C1\uD488\uD30C\uC77C
 useritem.itemName        = \uC0C1\uD488\uBA85
 useritem.itemPrice       = \uC0C1\uD488\uAC00\uACA9
 useritem.no              = \uBC88\uD638
+useritem.preview		 = \uBBF8\uB9AC\uBCF4\uAE30
+useritem.rank			 = \uC21C\uC704
 useritem.regdate         = \uAD6C\uB9E4\uC77C\uC2DC
