쇼핑몰 만들기
1. 댓글 등록 수정
2. 후기 등록 구현

--- a/main/resources/ApplicationMessage.properties
+++ b/main/resources/ApplicationMessage.properties
@@ -131,6 +131,11 @@ reply.writer		   = \uC791\uC131\uC790
 reply.content		   = \uB313\uAE00
 reply.regdate		   = \uC791\uC131 \uC77C\uC790
 
+review.writer		   = \uC791\uC131\uC790
+review.content		   = \uD6C4\uAE30
+review.regdate		   = \uC791\uC131 \uC77C\uC790
+
+
 user.auth                = \uAD8C\uD55C
 user.content             = \uB0B4\uC6A9
 user.coin				 = \uCF54\uC778
