쇼핑몰 만들기
1. 댓글/후기 수정 구현

--- a/main/resources/ApplicationMessage.properties
+++ b/main/resources/ApplicationMessage.properties
@@ -127,13 +127,15 @@ notice.regdate         = \uB4F1\uB85D\uC77C\uC2DC
 notice.title           = \uC81C\uBAA9
 notice.writer          = \uC791\uC131\uC790
 
-reply.writer		   = \uC791\uC131\uC790
+reply.header.modify	   = \uB313\uAE00 \uC218\uC815
 reply.content		   = \uB313\uAE00
 reply.regdate		   = \uC791\uC131 \uC77C\uC790
+reply.writer		   = \uC791\uC131\uC790
 
-review.writer		   = \uC791\uC131\uC790
-review.content		   = \uD6C4\uAE30
-review.regdate		   = \uC791\uC131 \uC77C\uC790
+review.header.modify   	= \uD6C4\uAE30 \uC218\uC815
+review.content		   	= \uD6C4\uAE30
+review.regdate		  	= \uC791\uC131 \uC77C\uC790
+review.writer		   	= \uC791\uC131\uC790
 
 
 user.auth                = \uAD8C\uD55C
