쇼핑몰 만들기
1. 홍보 배너 관리 구현

--- a/main/resources/ApplicationMessage.properties
+++ b/main/resources/ApplicationMessage.properties
@@ -20,6 +20,18 @@ auth.header.login  = \uB85C\uADF8\uC778
 auth.header.logout = \uB85C\uADF8\uC544\uC6C3
 auth.rememberMe    = \uB85C\uADF8\uC778 \uC0C1\uD0DC \uC720\uC9C0
 
+banner.bannerName			= \uBC30\uB108 \uC774\uB984
+banner.bannerNo				= \uBC30\uB108 \uBC88\uD638
+banner.bannerPicture		= \uBC30\uB108 \uC0AC\uC9C4
+banner.bannerPictureFile	= \uBC30\uB108 \uC0AC\uC9C4 \uD30C\uC77C
+banner.header.list			= \uD64D\uBCF4 \uBC30\uB108 \uBAA9\uB85D
+banner.header.modify		= \uD64D\uBCF4 \uBC30\uB108 \uBCC0\uACBD
+banner.header.read			= \uD64D\uBCF4 \uBC30\uB108 \uC0C1\uC138\uBCF4\uAE30
+banner.header.remove		= \uD64D\uBCF4 \uBC30\uB108 \uC0AD\uC81C
+banner.header.register		= \uD64D\uBCF4 \uBC30\uB108 \uB4F1\uB85D
+banner.itemId				= \uC0C1\uD488 \uBC88\uD638
+banner.itemName				= \uC0C1\uD488 \uC774\uB984
+
 board.content         = \uB0B4\uC6A9
 board.header.list     = \uD68C\uC6D0\uAC8C\uC2DC\uD310 \uBAA9\uB85D
 board.header.modify   = \uD68C\uC6D0\uAC8C\uC2DC\uD310 \uC218\uC815
@@ -98,6 +110,7 @@ item.read                 = \uBCF4\uAE30
 item.regdate              = \uB4F1\uB85D\uC77C\uC2DC
 item.remove               = \uC81C\uAC70
 
+menu.banner.admin	 = \uD64D\uBCF4\uBC30\uB108\uAD00\uB9AC
 menu.board.admin     = \uAC8C\uC2DC\uD310\uAD00\uB9AC
 menu.board.member    = \uD68C\uC6D0\uAC8C\uC2DC\uD310
 menu.codeclass.list  = \uCF54\uB4DC\uADF8\uB8F9\uAD00\uB9AC
@@ -129,14 +142,15 @@ notice.writer          = \uC791\uC131\uC790
 
 reply.header.modify	   = \uB313\uAE00 \uC218\uC815
 reply.content		   = \uB313\uAE00
+reply.empty			   = \uB313\uAE00\uC774 \uC5C6\uC2B5\uB2C8\uB2E4.
 reply.regdate		   = \uC791\uC131 \uC77C\uC790
 reply.writer		   = \uC791\uC131\uC790
 
 review.header.modify   	= \uD6C4\uAE30 \uC218\uC815
 review.content		   	= \uD6C4\uAE30
+review.empty			= \uD6C4\uAE30\uAC00 \uC5C6\uC2B5\uB2C8\uB2E4.
 review.regdate		  	= \uC791\uC131 \uC77C\uC790
 review.writer		   	= \uC791\uC131\uC790
-
 
 user.auth                = \uAD8C\uD55C
 user.content             = \uB0B4\uC6A9
