--- a/main/resources/ApplicationMessage.properties
+++ b/main/resources/ApplicationMessage.properties
@@ -12,6 +12,7 @@ action.register = \uB4F1\uB85D
 action.remove   = \uC0AD\uC81C
 action.save     = \uC800\uC7A5
 action.search   = \uAC80\uC0C9
+action.send		= \uC804\uC1A1
 action.signup	= \uD68C\uC6D0\uAC00\uC785
 
 adminpage.header	= \uAD00\uB9AC\uC790\uD398\uC774\uC9C0
@@ -124,6 +125,8 @@ menu.item.rank		 = \uC0C1\uD488 \uB7AD\uD0B9
 menu.notice.admin    = \uACF5\uC9C0\uC0AC\uD56D\uAD00\uB9AC
 menu.notice.member   = \uACF5\uC9C0\uC0AC\uD56D
 menu.user.admin      = \uD68C\uC6D0\uAD00\uB9AC
+menu.user.member	 = \uD68C\uC6D0 \uC815\uBCF4
+menu.user.modifypw	 = \uBE44\uBC00\uBC88\uD638 \uBCC0\uACBD
 menu.useritem.list   = \uAD6C\uB9E4\uC0C1\uD488
 menu.cart.list		 = \uC7A5\uBC14\uAD6C\uB2C8
 
@@ -156,20 +159,29 @@ user.auth                = \uAD8C\uD55C
 user.content             = \uB0B4\uC6A9
 user.coin				 = \uCF54\uC778
 user.email				 = \uC774\uBA54\uC77C
+user.findid				 = \uC544\uC774\uB514 \uCC3E\uAE30
+user.findpw				 = \uBE44\uBC00\uBC88\uD638 \uCC3E\uAE30
+user.header.checkpw		 = \uBE44\uBC00\uBC88\uD638 \uD655\uC778
+user.header.findid       = \uC544\uC774\uB514 \uCC3E\uAE30
+user.header.findpw       = \uBE44\uBC00\uBC88\uD638 \uCC3E\uAE30
 user.header.list         = \uD68C\uC6D0 \uBAA9\uB85D
 user.header.modify       = \uD68C\uC6D0 \uC218\uC815
+user.header.modifypw	 = \uBE44\uBC00\uBC88\uD638 \uBCC0\uACBD
 user.header.read         = \uD68C\uC6D0 \uC0C1\uC138\uBCF4\uAE30
 user.header.register     = \uD68C\uC6D0 \uB4F1\uB85D
 user.header.setup		 = \uAD00\uB9AC\uC790 \uB4F1\uB85D
 user.idchk				 = \uC911\uBCF5 \uCCB4\uD06C
 user.job                 = \uC9C1\uC5C5
+user.newpass			 = \uC0C8 \uBE44\uBC00\uBC88\uD638
 user.no                  = \uBC88\uD638
+user.oldpass			 = \uC608\uC804 \uBE44\uBC00\uBC88\uD638
 user.phone				 = \uD734\uB300\uD3F0 \uBC88\uD638
 user.regdate             = \uB4F1\uB85D\uC77C\uC2DC
 user.userId              = \uC544\uC774\uB514
 user.userName            = \uC0AC\uC6A9\uC790\uBA85
 user.userPw              = \uBE44\uBC00\uBC88\uD638
 user.userPwComfirm		 = \uBE44\uBC00\uBC88\uD638 \uD655\uC778
+user.withdraw			 = \uD68C\uC6D0 \uD0C8\uD1F4
 
 useritem.download        = \uB2E4\uC6B4\uB85C\uB4DC
 useritem.header.list     = \uAD6C\uB9E4\uC0C1\uD488 \uBAA9\uB85D
