쇼핑몰 만들기
1. 수정

--- a/main/resources/ApplicationMessage.properties
+++ b/main/resources/ApplicationMessage.properties
@@ -170,6 +170,7 @@ user.header.modifypw	 = \uBE44\uBC00\uBC88\uD638 \uBCC0\uACBD
 user.header.read         = \uD68C\uC6D0 \uC0C1\uC138\uBCF4\uAE30
 user.header.register     = \uD68C\uC6D0 \uB4F1\uB85D
 user.header.setup		 = \uAD00\uB9AC\uC790 \uB4F1\uB85D
+user.header.withdraw	 = \uD68C\uC6D0 \uD0C8\uD1F4
 user.idchk				 = \uC911\uBCF5 \uCCB4\uD06C
 user.job                 = \uC9C1\uC5C5
 user.newpass			 = \uC0C8 \uBE44\uBC00\uBC88\uD638
